--- a/大作业.html
+++ b/大作业.html
@@ -94,25 +94,25 @@
 					<div class="box-1">
 						<img src="大作业设计图/img1.png">
 						<div class="box-1-hhh">
-							<p>竞猜价：399.00</p><br><p>翡翠千手观音吊坠</p>
+							<p>竞猜价：¥399.00</p><br><p>翡翠千手观音吊坠</p>
 						</div>
 					</div>
 					<div class="box-2">
 						<img src="大作业设计图/img2.png">
 						<div class="box-2-hhh">
-							<p>竞猜价：1980.00</p><br><p>翡翠龙凤吊坠</p>
+							<p>竞猜价：¥1980.00</p><br><p>翡翠龙凤吊坠</p>
 						</div>
 					</div>
 					<div class="box-3">
 						<img src="大作业设计图/img3.png">
 						<div class="box-3-hhh">
-							<p>竞猜价：199.00</p><br><p>翡翠花蕊吊坠</p>
+							<p>竞猜价：¥199.00</p><br><p>翡翠花蕊吊坠</p>
 						</div>
 					</div>
 					<div class="box-4">
 						<img src="大作业设计图/img4.png">
 						<div class="box-4-hhh">
-							<p>竞猜价：199.00</p><br><p>翡翠如意吊坠</p>
+							<p>竞猜价：¥199.00</p><br><p>翡翠如意吊坠</p>
 						</div>
 					</div>
 				</div>
@@ -120,25 +120,25 @@
 					<div class="box-5">
 						<img src="大作业设计图/img5.png">
 						<div class="box-5-hhh">
-							<p>竞猜价：99.00</p><br><p>翡翠婵吊坠</p>
+							<p>竞猜价：¥99.00</p><br><p>翡翠婵吊坠</p>
 						</div>
 					</div>
 					<div class="box-6">
 						<img src="大作业设计图/img6.png">
 						<div class="box-6-hhh">
-							<p>竞猜价：99.00</p><br><p>翡翠观音（浅色）吊坠</p>
+							<p>竞猜价：¥99.00</p><br><p>翡翠观音（浅色）吊坠</p>
 						</div>
 					</div>
 					<div class="box-7">
 						<img src="大作业设计图/img7.png">
 						<div class="box-7-hhh">
-							<p>竞猜价：199.00</p><br><p>翡翠平安扣（深色）吊坠</p>
+							<p>竞猜价：¥199.00</p><br><p>翡翠平安扣（深色）吊坠</p>
 						</div>
 					</div>
 					<div class="box-8">
 						<img src="大作业设计图/img8.png">
 						<div class="box-8-hhh">
-							<p>竞猜价：199.00</p><br><p>翡翠如意吊坠</p>
+							<p>竞猜价：¥199.00</p><br><p>翡翠如意吊坠</p>
 						</div>
 					</div>
 				</div>
